         tzxlist.c: support the de-facto standard Windows-1252 charset in TZX
         text (Fred).
20101003 snapconv.c,man/snapconv.1: add -f flag to write snapshots with A and F
         and A' and F' transposed to fix SZX snaps written with old versions of
         libspectrum (Fred).
20101003 man/snapconv.1: libspectrum now automatically fixes the problem of
         A and F being transposed.
20101007 raw2hdf.c: add missing default for version (fixes bug #3082566; thanks,
         UB880D) (Fred).
20101129 ChangeLog,README,man/*.1: updates for 1.0.
20101206 Makefile.am: remember to put all compat directories in the dist tarball
         (thanks, kizmiaz).
20101216 README,configure.in,man/*.1: updates for 1.0.0 release.
20101216 ChangeLog: update date here as well.
20101229 tzxlist.c: fix typo in archive block printing (patch #3147102) (Alberto
         Garcia).
20110122 compat/win32/{Makefile.am,osname.c},configure.in: add compatibility
         function support for Windows (patch #3163680) (Sergio Baldovi).
20110122 audio2tape.h,configure.in: add support for --without-gcrypt flag like
         libspectrum (patch #3163845) (Ooblick).
20110405 compat.h,snap2tzx.c: add and use Fuse's GCC_PRINTF macro and add
         missing 'const' to format string parameter (Stuart).
20110413 man/tape2wav.1,tape2wav.c: allow writing WAV file to stdout (Fred).
20110414 tape2wav.c: allow writing WAV file to stdout on Windows (patch
         #3286205) (Sergio Baldovi).
20110427 tzxlist.c,man/tzxlist.1: add support for reading PZX files (Fred).
20110429 tzxlist.c: PZX files have archive info text as UTF-8 (Fred).
20110429 tape2wav.c: respect polarity when writing audio out (Fred).
20110501 man/profile2map.1: update my email address (Stuart).
20110514 tzxlist.c: add support for TZX set signal level block (Fred).
20110514 tape2wav.c: do a better job of respecting polarity when writing audio
         out (Fred).
20110717 tzxlist.c: print CODE header start address and length (Fred).