@@ -336,3 +336,4 @@
 20110514 tape2wav.c: do a better job of respecting polarity when writing audio
          out (Fred).
 20110717 tzxlist.c: print CODE header start address and length (Fred).
+20111219 rzxtool.c,scl2trd.c,snap2tzx.c: fix warnings.
